# Interface_S2VNA-test_task

./: CMakeLists.txt  LICENSE  README.md  main.cpp
src/Interfaces/: IVnaConfig.h  IVnaModel.h  IVnaView.h
src/Model/: VnaConfig.cpp  VnaConfig.h  VnaScpiClient.cpp  VnaScpiClient.h
src/Presenter/: MeasurementPresenter.cpp  MeasurementPresenter.h
src/View/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Workers/: VnaWorker.cpp  VnaWorker.h
